# simple_agent

./: .env.example  .gitignore  pyproject.toml
simple_agent/: run.py  schemas.py
simple_agent/configs/: deployment.json
